--- a/Z_image.tex
+++ b/Z_image.tex
@@ -13,7 +13,7 @@
 \begin{document}
 \pagestyle{empty}
 $$
-\thickfrac{\includegraphics[height = 2in, keepaspectratio=true]{figure/SS_Slice.png} \Scale[5]{-} \includegraphics[height = 2in, keepaspectratio=true]{figure/Mean_Slice.png}}{\includegraphics[height = 2in, keepaspectratio=true]{figure/SD_Slice.png}}
+\thickfrac{\includegraphics[height = 2in, keepaspectratio=true]{figure/SS_Slice.png} \Scale[5]{-} \includegraphics[height = 2in, keepaspectratio=true]{figure/Mean_Slice.png}}{\includegraphics[height = 2in, keepaspectratio=true]{figure/SD_Slice.png}} \;\;\;\;\;\raisebox{-5em}{ \Scale[4]{=} \;\;\;\;\;\includegraphics[height = 2in, keepaspectratio=true]{figure/161-413_20110710_1619_CT_2_HEAD_Head_template_zscore.png}}
 $$
 
 \end{document}
